# delivery

./: .drone.yml  .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md
config/: base.toml  development.toml  k8s.toml
docker/: Dockerfile.delivery  Dockerfile.run  docker-compose.yml
migrations/2018-08-13-071527_create_user_roles/: down.sql  up.sql
migrations/2018-08-13-131256_update_user_roles/: down.sql  up.sql
migrations/2018-08-20-115918_create_company_restrictions/: down.sql  up.sql
migrations/2018-08-20-115918_create_restrictions/: down.sql  up.sql
migrations/2018-08-20-122455_create_company_delivery_from/: down.sql  up.sql
migrations/2018-08-20-122455_create_delivery_from/: down.sql  up.sql
migrations/2018-08-20-122929_create_company_delivery_to/: down.sql  up.sql
migrations/2018-08-20-122929_create_delivery_to/: down.sql  up.sql
migrations/2018-08-23-074828_create_roles/: down.sql  up.sql
migrations/2018-08-23-134617_local_shipping/: down.sql  up.sql
migrations/2018-08-23-134636_international_shipping/: down.sql  up.sql
migrations/2018-08-24-090824_update_local_shipping/: down.sql  up.sql
migrations/2018-08-24-090836_update_international_shipping/: down.sql  up.sql
migrations/2018-08-28-084203_create_countries/: up.sql
migrations/2018-08-28-085123_create_companies/: up.sql
migrations/2018-08-28-124533_create_packages/: up.sql
migrations/2018-08-29-070159_create_companies_packages/: down.sql  up.sql
migrations/2018-08-29-141319_create_products/: up.sql
migrations/2018-08-29-142221_create_pickups/: down.sql  up.sql
migrations/2018-08-30-115142_drop_old/: down.sql  up.sql
migrations/2018-08-31-113110_update_products/: down.sql  up.sql
migrations/2018-09-03-080004_update_countries/: down.sql  up.sql
migrations/2018-09-06-101145_update_countries/: down.sql  up.sql
migrations/2018-09-06-123552_update_countries/: down.sql  up.sql
migrations/2018-09-06-124451_create_user_addresses/: up.sql
migrations/2018-09-10-140045_update_countries/: down.sql  up.sql
migrations/2018-10-03-123910_update_user_addresses/: down.sql  up.sql
migrations/2018-10-18-075627_update_countires/: down.sql  up.sql
migrations/2018-11-21-114031_add_shipping_rate_source_to_companies_packages/: down.sql  up.sql
migrations/2018-11-22-083635_add_static_shipping_rates/: down.sql  up.sql
migrations/2018-11-23-122049_change_type_of_weight_and_size_to_integer/: down.sql  up.sql
migrations/2018-11-26-073452_new_table_for_shipping_rates/: down.sql  up.sql
migrations/2019-02-02-091946_update_products_add_currenc/: down.sql  up.sql
src/: config.rs  errors.rs  extras.rs  lib.rs  main.rs  schema.rs  sentry_integration.rs
src/controller/: context.rs  mod.rs  routes.rs
src/macros/: mod.rs  validation_errors.rs
src/models/: companies.rs  companies_packages.rs  countries.rs  mod.rs  packages.rs  pickups.rs  products.rs  roles.rs  shipping.rs  shipping_rates.rs  user_addresses.rs  user_role.rs  validation_rules.rs
src/repos/: companies.rs  companies_packages.rs  delivery_from.rs  delivery_to.rs  mod.rs  packages.rs  pickups.rs  products.rs  repo_factory.rs  restrictions.rs  shipping_rates.rs  types.rs  user_addresses.rs  user_roles.rs
src/services/: companies.rs  (+13 more)
tests/: integration_companies_packages_test.rs  integration_companies_test.rs  integration_countries_test.rs  integration_delivery_from_test.rs  integration_delivery_to_test.rs  integration_international_shipping_test.rs  integration_local_shipping_test.rs  integration_packages_test.rs  integration_products_test.rs  integration_restrictions_test.rs  integration_user_addresses_test.rs
(+39 files in other folders)
