[package]
name = "delivery"
version = "0.1.0"

[lib]
name = "delivery_lib"
path = "src/lib.rs"

[dependencies]
base64="0.9"
chrono = { version = "0.4", features = ["serde", "rustc-serialize"] }
config = { version = "0.9", default-features = false, features = ["toml"] }
diesel = { version = "1.3.3", features = ["postgres", "extras"] }
failure = "0.1.1"
futures = "0.1.17"
futures-cpupool = "0.1.7"
hyper = "0.11.9"
hyper-tls="0.1.3"
jsonwebtoken = "4.0.0"
lazy_static = "1.0"
log = "0.4"
mime = "0.3.8"
native-tls = "0.1"
r2d2 = "0.8.1"
r2d2-diesel = "1.0.0"
rand = "0.5.5"
regex = "0.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
sha3 = "0.7.2"
stq_http = { path = "vendor/libstqbackend/http" }
stq_logging = { path = "vendor/libstqbackend/logging" }
stq_router = { path = "vendor/libstqbackend/router" }
stq_static_resources = { path = "vendor/libstqbackend/static_resources" }
stq_types = { path = "vendor/libstqbackend/types" }
stq_diesel_macro_derive = { path = "vendor/libstqbackend/diesel_macro_derive" }
tokio-core = "0.1"
uuid = { version = "*", features = ["use_std", "v4", "serde"] }
validator = "0.7.1"
validator_derive = "0.7.2"
sentry = "0.3"
